--- a/app/tpls/home/main/component/componentManage.html
+++ b/app/tpls/home/main/component/componentManage.html
@@ -1,6 +1,7 @@
 <style type="text/css">
+
 </style>
-<div class="projectBodyBox" style="overflow-y:visible">
+<div class="projectBodyBox">
     <div class="projectBodyTitle">
         组件管理
         <div class="floatright dropdownBox" dropdown>
@@ -51,10 +52,10 @@
                 </div>
             </div>
         </div>
-        <div class="useCaseList" style="">
+        <div class="useCaseList" style="bottom: 0px; overflow: auto;">
             <div class="useCaseListTitle">组一</div>
             <div class="userCaseListFunction">
-                <input class="floatleft fbtn_blue" type="button" value="新增组件" ng-click="open()">
+                <input class="floatleft fbtn_blue" type="button" value="新增组件" ng-click="open('createCompenent','lg')">
                 <input class="floatleft fbtn_blue" type="button" value="批量下载脚本" ng-click="open()">
                 <input class="floatleft fbtn_red" type="button" value="批量删除组件">
                 <div class="clear"></div>
