--- a/app/css/index.css
+++ b/app/css/index.css
@@ -110,8 +110,8 @@
     width: 100%;
     height: 100%;
     background: #fff;
-    border-right: 1px solid #f2f2f2;
-    box-shadow: 3px 0px 3px #ebf4fb;
+    border-right: 1px solid rgba(0,0,0,0.2);
+    box-shadow: 0 0 3px 0 rgba(0,0,0,.2);
 }
 
 .projectNav .searchBox {
@@ -120,7 +120,7 @@
     line-height: 40px;
     padding: 0px 15px 0px 40px;
     border: none;
-    border-bottom: 1px solid #dddddd;
+    border-bottom: 1px solid #d9d9d9;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -153,10 +153,15 @@
     margin: 0px 25px;
     cursor: pointer;
 }
-
+.projectNavTab{
+    width: 100%;
+    padding:  20px;
+    line-height: 1em;
+    border-bottom: 1px solid #cccccc;
+    text-align: center;
+}
 .projectNavList {
-	width: 280px;
-	
+	width: 280px;	
     border-top: 1px solid #f2f2f2;
 }
 
@@ -193,6 +198,8 @@
 .projectBodyBox {
     overflow-y: auto;
     height: 100%;
+    background: #e4e6f1;
+    position: relative;
 }
 
 .personalInnerTitle {
@@ -203,15 +210,29 @@
     border-bottom: 1px solid #e5e5e5;
     padding: 0px 25px;
 }
-
+.projectBodyContent{
+    position: absolute;
+    overflow: auto;
+    top: 76px;
+    left: 10px;
+    bottom: 0px;
+    right: 0px;
+    box-shadow: 0 0 3px 0 rgba(0,0,0,.2);
+    background: #fff;
+}
 .projectBodyTitle {
-    width: 100%;
-    margin-top: 20px;
-    padding: 0px 25px;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    height: 63px;
+    padding: 20px 25px 0px;
     padding-bottom: 20px;
     border-bottom: 1px solid #e5e5e5;
     font-size: 18px;
     color: #212121;
+    background: #fff;
+    box-shadow: 0 0 3px 0 rgba(0,0,0,.2);
 }
 .projectBodyTitleName{
 	width: 280px;
@@ -554,13 +575,13 @@ table a.f_red:hover {
     position: absolute;
     width: 330px;
     left: 0px;
-    top: 66px;
+    top: 0px;
     bottom: 0px;
     background: #FFFFFF;
 }
 .useHide{
 	position: absolute;
-	right: -10px;
+	right: 0px;
 	top: 50%;
 	cursor: pointer;
 	z-index: 99;
@@ -570,8 +591,9 @@ table a.f_red:hover {
     width: auto;
     right: 0px;
     left: 330px;
-    top: 66px;
+    top: 0px;
     min-width: 1000px;
+    background: #fff;
 }
 
 .useCaseTree .title {
@@ -581,8 +603,8 @@ table a.f_red:hover {
     color: #6e6e6e;
     line-height: 50px;
     padding: 0px 15px;
-    border-bottom: 1px solid #e5e5e5;
-    border-right: 1px solid #e5e5e5;
+    border-bottom: 1px solid #d9d9d9;
+    border-right: 1px solid #d9d9d9;
 }
 .useCaseTree .moreFuc .dropdown-menu{
     left:-120px;
@@ -591,7 +613,7 @@ table a.f_red:hover {
 .treeBody {
     width: 100%;
     padding: 15px 15px;
-    border-right: 1px solid #e5e5e5;
+    border-right: 1px solid #d9d9d9;
     position: absolute;
     top: 50px;
     bottom: 0px;
@@ -661,7 +683,7 @@ table a.f_red:hover {
     font-size: 14px;
     color: #212121;
     padding: 0px 15px;
-   	border-bottom: 1px solid #e5e5e5;
+   	border-bottom: 1px solid #d9d9d9;
 }
 
 .userCaseListFunction {
@@ -804,7 +826,9 @@ table a.f_red:hover {
     margin-right: 20px;
     margin-left: 5px;
 }
-
+.bugDetailBox{
+    background: #fff;
+}
 .bugDetailBox .tab {
     width: 100%;
     padding-left: 60px;
@@ -1085,6 +1109,7 @@ table tr td a:last-child {
 .personalNav{
     border-bottom: 1px solid #e5e5e5;
     height: 90px;
+    background: #fff;
 }
 .personalNav h3 {
     font-size: 16px;
