--- a/app/tpls/home/main/component/componentManage.html
+++ b/app/tpls/home/main/component/componentManage.html
@@ -1,101 +1,43 @@
 <style type="text/css">
 </style>
-<div class="projectBodyBox">
+<div class="projectBodyBox" ng-controller="componentCtrl">
     <div class="projectBodyTitle">
         组件管理
-        <div class="floatright dropdownBox" dropdown>
-            <input dropdown-toggle type="button" class="btn_gray dropdownToggle" value="更多操作">
-            <ul class="dropdown-menu" dropdown-menu role="menu">
-                <li><a ng-click="open()">导出用例</a></li>
-                <li><a>导入用例</a></li>
-                <li><a ng-click="open()">导入导出配置</a></li>
-                <li><a ng-click="open()">用例统计</a></li>
+    </div>
+    <div class="useCaseListfunc clearfix">
+        <div class="dropdownDefault floatleft" dropdown>
+            <div dropdown-toggle class="dropdowntoggle">
+                <span class="dropdowntoggletext">需求状态</span>
+                <i class="iconfont icon-unfold"></i>
+            </div>
+            <ul class="dropdown-menu transition" dropdown-menu role="menu">
+                <span class="triangle"></span>
+                <li><i class="iconfont icon-addpeople_fill"></i><span>待处理</span></li>
+                <li><i class="iconfont icon-addpeople_fill"></i><span>已处理</span></li>
             </ul>
         </div>
     </div>
-    <div class="projectBodyContent">
-        <div class="useCaseTree"  ng-style="useCaseTreeStyle">
-            <div class="aricon_treenav" ng-click="treeHide()" ng-class="treeOut?'aricon_treenav1':'aricon_treenav2'">
-                <i class="aricon_treenav_a"></i>
-            </div>
-            <div class="title">组件组</div>
-            <div class="treeBody">
-                <div>
-                    <script type="text/ng-template" id="nodes_renderer.html">
-                        <div class="tree-node tree-node-content">
-                            <a class="treeToggle" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)"><img ng-src="{{collapsed?'images/treeBody_close.png':'images/treeBody_open.png'}}"></a>
-                            <span ng-show="!this.isEdit" class="treeText">
-                                {{node.title | limitTo:10}}{{node.title.length>5?'...':''}}
-                            </span>
-                            <div class="pull-right dropdownBox moreFuc treeIcon" dropdown>
-                                <span dropdown-toggle type="button" class="glyphicon glyphicon-cog"></span>
-                                <ul class="dropdown-menu" dropdown-menu role="menu">
-                                    <li><a ng-click="open()">上移</a></li>
-                                    <li><a>下移</a></li>
-                                    <li><a ng-click="open()">新建子模块</a></li>
-                                    <li><a ng-click="open()">删除</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
-                            <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
-                            </li>
-                        </ol>
-                    </script>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div ui-tree="treeOptions" id="tree-root" drag-delay="200">
-                                <ol ui-tree-nodes ng-model="data">
-                                    <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
-                                </ol>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="projectBodyContent" style="top: 100px;">
         <div class="useCaseList" style="bottom: 0px; overflow: auto;" ng-style="useCaseListStyle">
-            <div class="useCaseListTitle">组一</div>
-            <div class="userCaseListFunction">
-                <input class="floatleft fbtn_blue" type="button" value="新增组件" ng-click="open('createCompenent','lg')">
-                <input class="floatleft fbtn_blue" type="button" value="批量下载脚本" ng-click="open()">
-                <input class="floatleft fbtn_red" type="button" value="批量删除组件">
+            <div class="useCaseListfunction">
+                <span class="floatleft selectNum">已选中2项：</span>
+                <span class="chatIconButton">
+                    <i class="iconfont icon-guanlian"></i>关联用例
+                </span>                
+                <span class="chatIconButton">
+                    <i class="iconfont icon-brush_fill"></i>修改处理人
+                </span>
+                <span class="chatIconButton floatright">
+                    <i class="iconfont icon-import"></i>导入
+                </span>
+                <span class="chatIconButton floatright">
+                    <i class="iconfont icon-daochu2"></i>导出
+                </span>
                 <div class="clear"></div>
             </div>
             <div class="userCaseListTable">
-                <table class="table-fullborder table-resize" id="resizeTable">
-                    <tr>
-                        <th style="width: 40px">
-                            <input type="checkbox" name="">
-                        </th>
-                        <th style="max-width: 80%" resizable r-directions="['right']" m-width="80">组件名称</th>
-                        <th>组件版本</th>
-                        <th>运行环境</th>
-                        <th>脚本名</th>
-                        <th>操作</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="checkbox" name="">
-                        </td>
-                        <td ng-click="fadeIn();$event.stopPropagation();">
-                            <span class="f_blue">test08</span>
-                        </td>
-                        <td>版本一</td>
-                        <td>window10</td>
-                        <td><span>脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1脚本1</span></td>
-                        <td><a class="f_blue">下载脚本</a><a class="f_blue">编辑</a><a class="f_red">删除</a></td>
-                    </tr>
-                </table>
-                <div class="floatright">
-                    <pagination boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm embed-responsive-item" previous-text="上一页" next-text="下一页" first-text="首页" last-text="尾页" max-size="maxSize" rotate="false">
-                    </pagination>
-                </div>
+                <div ui-grid="gridOptionsComponent"  ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
             </div>
-            <!-- <div ng-controller="editorCtrl" style="width:100%;margin-top:100px;">
-                <p>wangEditor 集成到 angular 的示例</p>
-                <div ng-model="text" contenteditable="true"></div>
-            </div> -->
         </div>
     </div>
 </div>
