--- a/app/tpls/home/main/component/componentManage.html
+++ b/app/tpls/home/main/component/componentManage.html
@@ -16,6 +16,9 @@
                 <li><i class="iconfont icon-addpeople_fill"></i><span>已处理</span></li>
             </ul>
         </div>
+        <div class="floatright btn_add" ng-click="open('createCompenent','lg')">
+            <span class="cicleicon"><i class="iconfont icon-add"></i></span> 新建组件
+        </div>
     </div>
     <div class="projectBodyContent" style="top: 100px;">
         <div class="useCaseList" style="bottom: 0px; overflow: auto;" ng-style="useCaseListStyle">
