--- a/app/tpls/home/main/component/componentManage.html
+++ b/app/tpls/home/main/component/componentManage.html
@@ -5,7 +5,7 @@
         组件管理
     </div>
     <div class="useCaseListfunc clearfix">
-        <div class="dropdownDefault floatleft" dropdown>
+        <!--<div class="dropdownDefault floatleft" dropdown>
             <div dropdown-toggle class="dropdowntoggle">
                 <span class="dropdowntoggletext">需求状态</span>
                 <i class="iconfont icon-unfold"></i>
@@ -15,6 +15,9 @@
                 <li><i class="iconfont icon-addpeople_fill"></i><span>待处理</span></li>
                 <li><i class="iconfont icon-addpeople_fill"></i><span>已处理</span></li>
             </ul>
+        </div>-->
+        <div class="floatleft btn_add" ng-click="open('createCompenent','lg')">
+            <span class="cicleicon"><i class="iconfont icon-add"></i></span> 新建组件
         </div>
     </div>
     <div class="projectBodyContent" style="top: 100px;">
@@ -22,17 +25,12 @@
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">已选中2项：</span>
                 <span class="chatIconButton">
-                    <i class="iconfont icon-guanlian"></i>关联用例
+                    <i class="iconfont icon-import"></i>下载脚本
                 </span>                
                 <span class="chatIconButton">
-                    <i class="iconfont icon-brush_fill"></i>修改处理人
+                    <i class="iconfont icon-empty_fill"></i>删除
                 </span>
-                <span class="chatIconButton floatright">
-                    <i class="iconfont icon-import"></i>导入
-                </span>
-                <span class="chatIconButton floatright">
-                    <i class="iconfont icon-daochu2"></i>导出
-                </span>
+                
                 <div class="clear"></div>
             </div>
             <div class="userCaseListTable">
