--- a/app/css/modal.css
+++ b/app/css/modal.css
@@ -57,3 +57,18 @@
     margin: 0px 5px 0px 10px;
     vertical-align: middle;
 }
+/*发起执行弹窗*/
+.runningDeviceBox .titleUl>li{
+    width: 50%;
+    float: left;
+    margin-bottom: 10px;
+}
+.runningDeviceBox .titleUl>li .inputText{
+    width: 70%;
+}
+.runningDeviceBox .titleUl>li .selectNormal{
+    width: 70%;
+}
+.runningDeviceBox .titleUl>li .defaultcheckBox{
+    margin: 10px 0px;
+}
