--- a/app/tpls/home/main/component/componentManage.html
+++ b/app/tpls/home/main/component/componentManage.html
@@ -37,7 +37,7 @@
                 <div class="clear"></div>
             </div>
             <div class="userCaseListTable">
-                <div ui-grid="gridOptionsComponent"  ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+                <div ui-grid="gridOptionsComponent"  ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
             </div>
         </div>
     </div>
