--- a/app/css/modal.css
+++ b/app/css/modal.css
@@ -61,14 +61,70 @@
 .runningDeviceBox .titleUl>li{
     width: 50%;
     float: left;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 .runningDeviceBox .titleUl>li .inputText{
-    width: 70%;
+    width: 60%;
 }
 .runningDeviceBox .titleUl>li .selectNormal{
-    width: 70%;
+    width: 60%;
 }
 .runningDeviceBox .titleUl>li .defaultcheckBox{
     margin: 10px 0px;
+}
+.runningDeviceBox .table-fullborder tr{
+    line-height: 28px;
+    height: 28px;
+    font-size: 12px;
+}
+.runningDeviceBox .table-fullborder tr td{
+    font-size: 12px;
+}
+.runningDeviceBox .leftBottomPanelChild{
+    padding: 10px;
+    overflow-y: auto;
+    height: 250px;
+}
+.runningDeviceBox .leftBottomPanelChildFunc{
+    margin-bottom: 10px;
+}
+.runningDeviceBox .leftBottomPanelChildFunc .selectNormal{
+    width: 120px;
+    height: 28px;
+    border-radius: 0;
+    border-color: #008bff;
+    color: #008bff;
+    font-size: 12px;
+}
+.runningDeviceBox .leftBottomPanelChildFunc .borderbtndefault{
+    line-height: 26px;
+    height: 28px;
+    font-size: 12px;
+}
+.runningDeviceBox .leftPanel {
+    float: left;
+    width: 70%;
+    border-right: 1px solid #ccc;
+}
+
+.runningDeviceBox .rightPanel {
+    float: left;
+    width: 30%;
+}
+
+.runningDeviceBox .titleUl li h1 {
+    width: auto;
+    text-align: left;
+    font-size: 12px;
+    line-height: 30px;
+}
+.runningDeviceBox .titleUl li .inputText{
+    line-height: 30px;
+    height: 30px;
+    font-size: 12px;
+}
+.runningDeviceBox .titleUl li .selectNormal{
+    line-height: 30px;
+    height: 30px;
+    font-size: 12px;
 }
