--- a/app/css/common.css
+++ b/app/css/common.css
@@ -523,9 +523,38 @@ a.f_red:hover {
     margin-top: 2px;
 }
 
-
-
-
+.defaultcheckBox .defaultcheckText{
+    display: inline-block;
+    max-width: 70%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+/*默认时间选择框*/
+.defaultTimeSelectBox{
+    position: relative;
+}
+.defaultTimeSelectBox .timeselectTitle{
+    position: absolute;
+    line-height: 30px;
+    color: #a1a1a1;
+    left: 0px;
+    top: 0px;
+}
+.defaultTimeSelectBox .timeselectInput{
+    float: left;
+    padding-left: 70px;
+    border-bottom: 1px solid #eee;
+    width: 100%;
+    height: 30px;
+    outline: none;
+}
+.defaultTimeSelectBox>.dropdown-menu{
+    left: -16px!important;
+}
+.defaultTimeSelectBox .timeselectInput:focus{
+    border-color: #008bff;
+}
 /*下拉列表*/
 
 .dropdownBox {
@@ -589,18 +618,18 @@ a.f_red:hover {
     margin-right: 5px;
 }
 
-.dropdownBox .dropdown-menu li a {
+.dropdownBox .dropdown-menu>li a {
     height: 40px;
     line-height: 40px;
     cursor: pointer;
     color: #6e6e6e;
 }
 
-.dropdownBox .dropdown-menu li a:hover {
+.dropdownBox .dropdown-menu>li a:hover {
     background: #dde2ef;
 }
 
-.dropdownBox .dropdown-menu1 li a:hover {
+.dropdownBox .dropdown-menu1>li a:hover {
     background: none;
 }
 
@@ -689,9 +718,30 @@ a.f_red:hover {
     top: -10px;
 }
 
-
-
-
+/*日期选择器*/
+.datetimePicker .dropdown-menu>li{
+    line-height: 28px;
+}
+.datetimePicker .dropdown-menu>li table{
+    outline: none;
+}
+.datetimePicker .dropdown-menu>li table td{
+    outline: none;
+    border: none;
+}
+.datetimePicker .dropdown-menu>li table .btn-default{
+    border: none;
+}
+.datetimePicker .dropdown-menu>li table .btn-info.active{
+    background: #008bff;
+    border: none;
+}
+.datetimePicker .dropdown-menu>li table .text-info{
+    color: #fff;
+}
+.datetimePicker .dropdown-menu>li .btn-group .btn-info{
+    background: #008bff;margin-right: 5px;
+}
 /*提示弹出*/
 
 [data-tip] {
@@ -1121,17 +1171,7 @@ a.f_red:hover {
 }
 
 /*自定义勾选框样式*/
-.checkOperation{
-    font-size: 14px;
-    display: inline-block;
-    vertical-align: top;
-    color: #333;
-    cursor: pointer;
-}
-.checkOperation .operationCheckBox{
-    border-color: #ccc!important;
-    background: #fff!important;
-}
+
 /*弹窗*/
 
 .modal-body {
