--- a/app/css/index.css
+++ b/app/css/index.css
@@ -88,7 +88,6 @@
     width: 100%;
     height: 100%;
     background: #fff;
-    border-right: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, .2);
 }
 /*搜索块*/
@@ -144,7 +143,7 @@
     border-right: 1px solid transparent;
 }
 /*列表切换块*/
-.projectNavList {
+.leftNavList {
     width: 100%;
     background: #FFFFFF;
     position: absolute;
@@ -262,7 +261,7 @@
     width: 100%;
     overflow: auto;
     position: absolute;
-    top: 40px;
+    top: 45px;
     bottom: 0px;
 }
 
@@ -300,7 +299,7 @@
 
 .treeBody .tree-node-content {
     width: 150px;
-    padding: 4px 10px 4px 0px;
+    padding: 0px 10px 0px 0px;
     cursor: pointer;
     font-size: 12px;
     color: #3b3b3b;
@@ -311,6 +310,11 @@
 }
 .treeBody .tree-node-content .icon-wenjianjia1{
     color: #ff9800;
+    font-size: 13px;
+    margin-left: 5px;
+}
+.treeBody .tree-node-content .icon-case{
+    color: #008bff;
     font-size: 13px;
     margin-left: 5px;
 }
@@ -335,6 +339,69 @@
 .useCaseTree1 .title{
     border-top: none;
 }
+/*自定义筛选块*/
+/*选择过滤器*/
+.customFilterTitle select{
+    height: 38px;
+    border:0px;
+    outline: none;
+    width: 100%;
+    text-overflow: ellipsis;
+    border-bottom: 1px solid #eee;
+}
+.customFilterTitle{
+    width: 100%;
+    border-top: 1px solid #eee;
+    padding: 0px 15px 10px;
+    font-size: 14px;
+    color: #6e6e6e;
+}
+.customFilterContent{
+    width: 100%;
+    position: absolute;
+    top: 40px;
+    bottom: 0px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+.customFilterContent1{
+    top: 90px;
+}
+.customFilterContent .panel{
+    box-shadow: none;
+    border-radius: 0px;
+    border-left: 0px;
+    border-right: 0px;
+}
+.customFilterContent .panel-default > .panel-heading{   
+    width: 100%;
+    cursor: pointer;
+    font-size: 14px;
+    background: #f5f6fa;
+    border-radius: 0px;
+    padding: 0px;
+}
+.customFilterContent .panel-default > .panel-heading .accordion-toggle{
+    font-size: 14px;
+    color: #6e6e6e;
+    padding:10px 10px;
+    display: inline-block;
+    width: 100%;
+}
+.customFilterContent .panel-default > .panel-heading .panel-title .selectAll{
+    color: #bbb;
+}
+.customFilterContent .panel-default > .panel-collapse .panel-body{
+    padding: 10px 15px;
+}
+.customFilterContent .customFilterSelect>li{
+    width: 50%;
+    float: left;
+    margin: 6px 0px;
+}
+.customFilterContent .customFilterTime>li{
+    margin-bottom: 10px;
+}
 /*左侧导航终*/
 /*主内容块起始*/
 
@@ -355,7 +422,7 @@
     background: #fff;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, .2);
     position: relative;
-    z-index: 103;
+    z-index: 102;
 }
 /*一级标题导航*/
 .personalNav {
