--- a/app/css/index.css
+++ b/app/css/index.css
@@ -364,22 +364,38 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
+.customFilterContent .customFilterBtn{
+    padding: 0px 10px;
+}
+.customFilterContent .customFilterSave{
+    display: inline-block;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    background: #008bff;
+    color: #fff;
+    border-radius: 3px;
+    text-align: center;
+    font-size: 14px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+}
 .customFilterContent1{
     top: 90px;
 }
 .customFilterContent .panel{
     box-shadow: none;
     border-radius: 0px;
-    border-left: 0px;
-    border-right: 0px;
+    border: 0px;
+
 }
 .customFilterContent .panel-default > .panel-heading{   
     width: 100%;
     cursor: pointer;
     font-size: 14px;
-    background: #f5f6fa;
+    background: rgba(240,240,240,.4);
     border-radius: 0px;
     padding: 0px;
+    border:0px;
 }
 .customFilterContent .panel-default > .panel-heading .accordion-toggle{
     font-size: 14px;
@@ -393,11 +409,13 @@
 }
 .customFilterContent .panel-default > .panel-collapse .panel-body{
     padding: 10px 15px;
+    border: 0px;
 }
 .customFilterContent .customFilterSelect>li{
     width: 50%;
     float: left;
     margin: 6px 0px;
+    font-size: 14px;
 }
 .customFilterContent .customFilterTime>li{
     margin-bottom: 10px;
