--- a/app/tpls/home/main/component/componentManage.html
+++ b/app/tpls/home/main/component/componentManage.html
@@ -3,24 +3,11 @@
 <div class="projectBodyBox" ng-controller="componentCtrl">
     <div class="projectBodyTitle">
         组件管理
-    </div>
-    <div class="useCaseListfunc clearfix">
-        <!--<div class="dropdownDefault floatleft" dropdown>
-            <div dropdown-toggle class="dropdowntoggle">
-                <span class="dropdowntoggletext">需求状态</span>
-                <i class="iconfont icon-unfold"></i>
-            </div>
-            <ul class="dropdown-menu transition" dropdown-menu role="menu">
-                <span class="triangle"></span>
-                <li><i class="iconfont icon-addpeople_fill"></i><span>待处理</span></li>
-                <li><i class="iconfont icon-addpeople_fill"></i><span>已处理</span></li>
-            </ul>
-        </div>-->       
         <div class="floatright btn_add" ng-click="open('createCompenent','lg')">
             <span class="cicleicon"><i class="iconfont icon-add"></i></span> 新建组件
         </div>
     </div>
-    <div class="projectBodyContent" style="top: 100px;">
+    <div class="projectBodyContent" style="top: 56px;">
         <div class="useCaseList" style="bottom: 0px; overflow: auto;" ng-style="useCaseListStyle">
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">已选中2项：</span>
@@ -33,9 +20,13 @@
                 <span class="chatIconButton">
                     <i class="iconfont icon-empty_fill"></i>删除
                 </span>
-                 <span class="chatIconButton floatright" ng-click="">
-                    <i class="iconfont icon-import"></i>导入组建
+                 <span class="chatIconButton" ng-click="">
+                    <i class="iconfont icon-import"></i>导入组件
                 </span>
+                <div class="floatright searchBox">
+                    <input type="text" name="" class="inputSearch" placeholder="输入关键词按回车搜索">
+                    <i class="iconfont icon-search"></i>
+                </div>
                 <div class="clear"></div>
             </div>
             <div class="userCaseListTable">
