--- a/app/css/modal.css
+++ b/app/css/modal.css
@@ -182,6 +182,9 @@
     height: 400px;
     overflow-y: auto;
 }
+.modalRightContent1{
+    padding-left: 10px;
+}
 /*多选块*/
 .modalSelectPanel{
     width: 100%;
@@ -206,7 +209,6 @@
 .modalDataPanel .title{
     font-size: 14px;
     padding-bottom: 10px;
-    padding-top: 10px;
 }
 .modalDataPanel .title .leftTitle{
     margin-top: 6px;
@@ -231,7 +233,7 @@
     line-height: 30px;
 }
 .modalDataPanel{
-    padding: 0px 20px 10px;
+    padding: 10px 0px;
     border-top: 1px solid #eee;
 }
 .modalDataPanel .tablePanel{
