--- a/app/tpls/home/main/component/componentManage.html
+++ b/app/tpls/home/main/component/componentManage.html
@@ -12,7 +12,7 @@
             <div class="useCaseListfunction">
                 <span class="floatleft selectNum">已选中2项：</span>
                  <span class="chatIconButton" ng-click="open('updateScript','lg')">
-                    <i class="iconfont icon-gengxin"></i>更新脚本
+                    <i class="iconfont icon-bianji"></i>编辑
                 </span> 
                 <span class="chatIconButton">
                     <i class="iconfont icon-import"></i>下载脚本
